There was my email in config.ini

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@
 [DEFAULT]
 debug = true
 # Uncomment and replace with the address which should receive any error reports
-email_to = e.imhotep@gmail.com
+#email_to = some@email.com
 error_email_from = troppotardi@troppotardi.com
 
 [server:main]
