--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@
 debug = true
 # Uncomment and replace with the address which should receive any error reports
 #email_to = some@email.com
-error_email_from = troppotardi@troppotardi.com
+error_email_from = paster@email.com
 
 [server:main]
 use = egg:Paste#http
