Added reCAPTCHA check.

--- a/config.ini
+++ b/config.ini
@@ -35,6 +35,7 @@ thumbs_base_url = /thumbs/
 # reCAPTCHA
 recaptcha_pubkey = recaptcha_key
 recaptcha_privkey = recaptcha key
+recaptcha_server = http://www.google.com/recaptcha/api/verify
 
 # The server MUST use SSL.
 smtp_server = smtp.gmail.com
