--- a/config.ini
+++ b/config.ini
@@ -44,6 +44,9 @@ smtp_username = xxx@gmail.com
 smtp_email = xxx@gmail.com
 smtp_password = xxx
 
+# Google analytics
+analytics_id = UA-XXXXX-X
+
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
 # here:
