Updated base config.ini files.

--- a/config.ini
+++ b/config.ini
@@ -4,15 +4,15 @@
 # The %(here)s variable will be replaced with the parent directory of this file
 #
 [DEFAULT]
-debug = true
+debug = false
 # Uncomment and replace with the address which should receive any error reports
-#email_to = some@email.com
-error_email_from = paster@email.com
+email_to = e.imhotep@gmail.com
+error_email_from = troppotardi@troppotardi.com
 
 [server:main]
 use = egg:Paste#http
-host = 127.0.0.1
-port = 5000
+host = 0.0.0.0
+port = 5001
 
 [app:main]
 use = egg:troppotardi
@@ -23,29 +23,33 @@ cache_dir = %(here)s/data
 beaker.session.key = troppotardi
 beaker.session.secret = somesecret
 
+base_url = http://base_url.com
+
+# Your couchdb data
 couchdb_server = http://localhost:5984/
 couchdb_uri = http://localhost:5984/troppotardi
 
-images_dir = /where/images/will/be/stored
-images_base_url = /static_images/
-images_max_size = 2000000
-thumbs_dir = /where/thumbnails/will/be/stored/
-thumbs_base_url = /thumbs/
+images_dir = /base/directory/for/uploaded/images/
+images_base_url = /base/url/for/uploaded/images/
+images_max_size = 3000000 # in bytes
+thumbs_dir = /home/astroboy/proj/troppotardi/troppotardi/public/thumbs/
+thumbs_dir = /base/directory/for/thumbs/
+thumbs_base_url = /base/url/for/thumbs/
 
-# reCAPTCHA
-recaptcha_pubkey = recaptcha_key
-recaptcha_privkey = recaptcha key
+# reCAPTCHA data
+recaptcha_pubkey = your_pubkey
+recaptcha_privkey = your_privatekey
 recaptcha_server = http://www.google.com/recaptcha/api/verify
 
 # The server MUST use SSL.
-smtp_server = smtp.gmail.com
+smtp_server = smtp_server
 smtp_port = 465
-smtp_username = xxx@gmail.com
-smtp_email = xxx@gmail.com
-smtp_password = xxx
+smtp_username = username
+smtp_email = email
+smtp_password = password
 
-# Google analytics
-analytics_id = UA-XXXXX-X
+# stats
+analytics_id = UA-XXXXXXXX-X
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
